# ComfyUI-PuLID-Flux-Enhanced

./: README.md  __init__.py  encoders_flux.py  online_train1.py  online_train2.py  pulidflux.py  pyproject.toml  requirements.txt
eva_clip/: __init__.py  constants.py  eva_vit_model.py  factory.py  hf_configs.py  hf_model.py  loss.py  model.py  modified_resnet.py  openai.py  pretrained.py  rope.py  timm_model.py  tokenizer.py  transform.py  transformer.py  utils.py
eva_clip/model_configs/: EVA01-CLIP-B-16.json  EVA01-CLIP-g-14-plus.json  EVA01-CLIP-g-14.json  EVA02-CLIP-B-16.json  EVA02-CLIP-L-14-336.json  EVA02-CLIP-L-14.json  EVA02-CLIP-bigE-14-plus.json  EVA02-CLIP-bigE-14.json
examples/: flux_pulid_multi.json  pulid_flux_16bit_simple.json  pulid_flux_8bitgguf_simple.json
